--- a/site/index.html
+++ b/site/index.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="#page-top">
-                <img src="./assets/img/logo/logo em grande/logo sem bg.png" alt="LisbonWhisper Logo" style="max-height: 40px;">
+                <img src="./assets/img/logo/logo em grande/logo_corrigido.png" alt="LisbonWhisper Logo" style="max-height: 40px;">
 
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +52,7 @@
         <div class="container px-4 px-lg-5 h-100">
             <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-8 align-self-end">
-                    <img src="./assets/img/logo/logo em grande/logo sem bg.png" alt="LisbonWhisper Logo" style="max-height: 200px;">
+                    <img src="./assets/img/logo/logo em grande/logo_corrigido.png" alt="LisbonWhisper Logo" style="max-height: 200px; margin-bottom: 20px;">
                 </div>
                 <div class="col-lg-8 align-self-baseline">
                     <p class="text-white-75 mb-5">
