--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
     <script src="js/scripts.js"></script>   
-
 </head>
 
 <body id="page-top">
@@ -32,7 +31,7 @@
         <div class="container px-4 px-lg-5">
             
             <a class="navbar-brand" href="#page-top">
-                <img src="assets\img\logo\logo em grande\logo_corrigido.png" alt="LisbonWhisper Logo" style="max-height: 40px;">
+                <img src="./assets\img\logo\logo em grande\logo_corrigido.png" alt="LisbonWhisper Logo" style="max-height: 40px;">
             </a>
             
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,8 +41,8 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#about">Everything about my project</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#pap-tools">Project Tools</a></li>
                     <li class="nav-item"><a class="nav-link" href="#avatar-section">Website developer</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#pap-tools">Project Tools</a></li>
                 </ul>
             </div>
         </div>
@@ -54,11 +53,10 @@
         <div class="container px-4 px-lg-5 h-100">
             <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-8 align-self-end">
-                    <img src="assets\img\logo\logo em grande\logo_corrigido.png" alt="LisbonWhisper Logo" class="img-fluid" style="max-height: 100px; margin-bottom: 20px;">
+                    <img src="./assets\img\logo\logo em grande\logo_corrigido.png" alt="LisbonWhisper Logo" class="img-fluid" style="max-height: 100px; margin-bottom: 20px;">
                 </div>
                 <div class="col-lg-8 align-self-baseline">
                     <p class="text-white-75 mb-5">
-                    <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
                 </div>
             </div>
         </div>
@@ -72,7 +70,6 @@
                     <h2 class="text-white mt-0">What is my project about?</h2>
                     <hr class="divider divider-light" />
                     <p class="text-white-75 mb-4">This website is part of a project called LisbonWhisper. The project revolves around a tourism company offering tours in Lisbon and its surroundings. It will include a MySQL database, an application developed in Android Studio, and a functional website where users can contact the company to book their tours around Lisbon, with various types of routes and guides for any destination they wish to explore.</p>
-                    <a class="btn btn-light btn-xl" href="#pap-tools">Get Started!</a>
                 </div>
             </div>
         </div>
