--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h2 class="text-center mt-0">Developers</h2>
                     <hr class="divider" />
                     <img class="img-fluid rounded-circle" src="./assets/img/avatar-image/AvatarAlex.png" alt="Your Avatar" style="max-width: 200px;" />
-                    <h3 class="mt-3">Rodrigo Assunção</h3>
+                    <h3 class="mt-3">Rodrigo Alexandre</h3>
                 </div>
             </div>
         </div>
