--- a/index.html
+++ b/index.html
@@ -76,25 +76,23 @@
     </section>
 
     <!-- Avatar Section-->
-    <section class="page-section bg-dark text-white" id="avatar-section">
-        <div class="container-fluid p-0">
-            <div class="row g-0 justify-content-center">
-                <div class="col-lg-4 col-sm-6 text-center">
-                    <h2 class="text-center mt-0">Developers</h2>
-                    <hr class="divider" />
-                    <img class="img-fluid rounded-circle" src="./assets/img/avatar-image/Avatar (1).jpg" alt="Your Avatar" style="max-width: 200px;" />
-                    <h3 class="mt-3">Rodrigo Assunção</h3>
-                </div>
-                
-                <div class="col-lg-4 col-sm-6 text-center">
-                    <h2 class="text-center mt-0">Developers</h2>
-                    <hr class="divider" />
-                    <img class="img-fluid rounded-circle" src="./assets/img/avatar-image/AvatarAlex.png" alt="Your Avatar" style="max-width: 200px;" />
-                    <h3 class="mt-3">Rodrigo Alexandre</h3>
-                </div>
+<section class="page-section bg-dark text-white" id="avatar-section">
+    <div class="container-fluid p-0">
+        <h2 class="text-center mt-0">Developers</h2>
+        <hr class="divider" />
+        <div class="row g-0 justify-content-center">
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-fluid rounded-circle" src="./assets/img/avatar-image/Avatar (1).jpg" alt="Rodrigo Assunção" style="max-width: 200px;" />
+                <h3 class="mt-3">Rodrigo Assunção</h3>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-fluid rounded-circle" src="./assets/img/avatar-image/AvatarAlex.png" alt="Rodrigo Alexandre" style="max-width: 200px;" />
+                <h3 class="mt-3">Rodrigo Alexandre</h3>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
 
     </section>
