--- a/index.html
+++ b/index.html
@@ -53,15 +53,17 @@
         <div class="container px-4 px-lg-5 h-100">
             <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-8 align-self-end">
-                    <img src="./assets\img\logo\logo em grande\logo_corrigido.png" alt="Whisper Logo" class="img-fluid" style="max-height: 100px; margin-bottom: 20px;">
+                    <img src="./assets/img/logo/logo em grande/logo_corrigido.png" 
+                        alt="Whisper Logo" 
+                        class="img-fluid logo">
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 mb-5">
+                    <p class="text-white-75 mb-5"></p>
                 </div>
             </div>
         </div>
     </header>
-
+    
     <!-- About-->
     <section class="page-section bg-primary" id="about">
         <div class="container px-4 px-lg-5">
