--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -84,11 +85,11 @@
         <hr class="divider" />
         <div class="row g-0 justify-content-center">
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-fluid rounded-circle" src="./assets/img/avatar-image/Avatar (1).jpg" alt="Rodrigo Assunção" style="max-width: 200px;" />
+                <img class="img-fluid rounded-circle" src="assets\img\avatar-image\Multimédia__1_-removebg-preview.png" alt="Rodrigo Assunção" style="max-width: 200px;" />
                 <h3 class="mt-3">Rodrigo Assunção</h3>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-fluid rounded-circle" src="./assets/img/avatar-image/AvatarAlex.png" alt="Rodrigo Alexandre" style="max-width: 200px;" />
+                <img class="img-fluid rounded-circle" src="assets\img\avatar-image\Multimédia-removebg-preview.png" alt="Rodrigo Alexandre" style="max-width: 200px;" />
                 <h3 class="mt-3">Rodrigo Alexandre</h3>
             </div>
         </div>
